--- a/.github/workflows/walaa-action.yaml
+++ b/.github/workflows/walaa-action.yaml
@@ -16,5 +16,5 @@ jobs:
 
       - name: Trigger Jenkins Job
         run: |
-          curl -X POST "http://10.0.0.9:8080/job/Deploy-Django-on-AWS/build" \
+          curl -X POST "https://16b1-79-177-155-4.ngrok-free.app/job/Deploy-Django-on-AWS/build" \
             --user "admin:${{ secrets.JENKINS_API_TOKEN }}"
