--- a/Django/Dockerfile
+++ b/Django/Dockerfile
@@ -16,4 +16,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["gunicorn", "server.wsgi:application", "--bind", "0.0.0.0:8000"]
+CMD ["gunicorn", "wsgi:application", "--bind", "0.0.0.0:8000"]
